Fetching Quote API

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <button id="button-new_quote">New Quote</button>
         </div>
     </div>
+
+    <!-- Scripts -->
+    <script src="script.js"></script>
 </body>
 
 </html>
