Displaying quote on the web page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <!-- Quote -->
         <div id="quote-line">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Don't wait for an opportunity to get ready. Get ready for opportunity.</span>
+            <span id="quote"></span>
         </div>
 
         <!-- Author -->
         <div id="author-line">
-            <span id="author">Elegis</span>
+            <span id="author"></span>
         </div>
 
         <!-- Buttons -->
